# tubelizer

./: README.md  csv_data.db  data.csv  requirements.txt  setup.cfg
src/: csv_operations.py  database_operations.py  db_operations.py  main.py  ui_components.py  ui_elements.py
