[metadata]
name = Tubelizer
version = 0.1
description = A simple CSV and database viewer
author = Your Name
author_email = your.email@example.com
license = AGPL-3.0

[options]
packages = find:
install_requires =
    pandas == 1.3.3

[options.entry_points]
console_scripts =
    tubelizer = src.main:main
